<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Song Title-->
        <TextView
            style="@style/NowPlayingSongStyle"
            android:text="@string/song1notime" />

        <!--Album Cover-->
        <View
            style="@style/AlbumCoverStyle"
            android:background="@color/colorPrimaryDark" />

        <!--Seek Bar-->
        <LinearLayout style="@style/SeekBarLayoutStyle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Song1Beginning" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/SeekBarStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Song1End" />

        </LinearLayout>

        <!--Back, Play, Forward Buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                style="@style/SmallButtonStyle"
                android:text="@string/PlayButton" />

            <Button
                style="@style/SmallButtonStyle"
                android:text="@string/PauseButton" />

            <Button
                style="@style/SmallButtonStyle"
                android:text="@string/NextButton" />

            -->
        </LinearLayout>

        <!--Song Library Button-->
        <Button
            android:id="@+id/songlibrary"
            style="@style/ButtonStyle"
            android:text="@string/SongLibrary" />

    </LinearLayout>

</ScrollView>