<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicLibraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Play and Shuffle Buttons-->

            <Button
                android:id="@+id/playbutton"
                style="@style/ButtonStyle"
                android:text="@string/PlayButton" />

            <Button
                android:id="@+id/shufflebutton"
                style="@style/ButtonStyle"
                android:text="@string/ShuffleButton" />

        </LinearLayout>

        <!--Song 1-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/song1" />

        </LinearLayout>

        <!--Song 2-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song2" />

        </LinearLayout>

        <!--Song 3-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song3" />

        </LinearLayout>

        <!--Song 4-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song4" />

        </LinearLayout>

        <!--Song 5-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song5" />

        </LinearLayout>

        <!--Song 6-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song6" />

        </LinearLayout>

        <!--Song 7-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song7" />

        </LinearLayout>

        <!--Song 8-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song8" />

        </LinearLayout>

        <!--Song 9-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song9" />

        </LinearLayout>

        <!--Song 10-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song10" />

        </LinearLayout>

        <!--Song 11-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song11" />

        </LinearLayout>

        <!--Song 12-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song12" />

        </LinearLayout>

        <!--Song 13-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song13" />

        </LinearLayout>

        <!--Song 14-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song14" />

        </LinearLayout>

        <!--Song 15-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song15" />

        </LinearLayout>

        <!--Song 16-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song16" />

        </LinearLayout>

        <!--Song 17-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song17" />

        </LinearLayout>

        <!--Song 18-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song18" />

        </LinearLayout>

        <!--Song 19-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song19" />

        </LinearLayout>

        <!--Song 20-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                style="@style/PlayImageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton" />

            <TextView
                style="@style/SongStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song20" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>